Menu display fix on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -486,7 +486,7 @@ a:visited { color: #205caa; }
   .site-nav:hover .trigger { display: block; }
 
   .site-nav > ul > li {
-    clear: right;
+    clear: left;
     display: block;
     text-align: right;
     line-height: 1.25;
